# kata

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  KATA-STYLE.md  MIGRATION_PLAN.md  README.md  SMOKE_TEST.md  UAT_TEST.md  eslint.config.mjs  eslint.config.ts  kata-cloud-agents.code-workspace  kata-orchestrator.code-workspace  mint.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  turbo.json  types.ts
apps/symphony/: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  WORKFLOW-cli.md  WORKFLOW-symphony.md  WORKFLOW.md  cli-WORKFLOW.md  package.json
apps/symphony/.kata/: DECISIONS.md  PROJECT.md  REQUIREMENTS.md  STATE.md  metrics.json  preferences.md
apps/symphony/docker/: .env.example  Dockerfile.symphony  Dockerfile.worker  WORKFLOW-docker.md  docker-compose.yml
apps/symphony/docs/: WORKFLOW-REFERENCE.md  WORKFLOW-cli.md  WORKFLOW-github-labels.md  WORKFLOW-github-projects.md  WORKFLOW-linear.md  WORKFLOW-slack.md  WORKFLOW-symphony.md
apps/symphony/pi-extension/: README.md  package.json  tsconfig.json
apps/symphony/prompts/: agent-review.md  in-progress.md  merging.md  repo-cli.md  repo-desktop.md  repo-mono.md  repo-sym.md  rework.md  shared-cli.md  shared-symphony.md  shared.md  supervisor.md  system.md
apps/symphony/src/: config.rs  docker.rs  doctor.rs  domain.rs  error.rs  event_stream.rs  helper.rs  http_server.rs  lib.rs  logging.rs  main.rs  notifications.rs  orchestrator.rs  path_safety.rs  prompt_builder.rs  repo_url.rs  ssh.rs  (+8 more)
(+3257 files in other folders)
