[package]
name = "symphony"
version = "1.1.0"
edition = "2021"
description = "Symphony orchestrator — polls Linear, dispatches Codex agent sessions"
license = "MIT"

[[bin]]
name = "symphony"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# HTTP server
axum = "0.8"

# Template engine (Liquid-compatible)
liquid = "0.26"
liquid-core = "0.26"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rolling-file = "0.2"

# Async trait
async-trait = "0.1"

# Error handling
thiserror = "2"
anyhow = "1"

# File watching
notify = "7"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"

# Regex for sanitization
regex = "1"
dotenvy = "0.15.7"
shell-words = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
mockito = "1"
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
